# MOpS

./: .cproject  .gitattributes  .gitconfig  .gitignore  .gitmodules  .project  Allmake  Allrun  CMakeLists.txt  INSTALL.sh  INSTALLATION.md  INSTALLATION_ON_WSL.md  Makefile  README  README.md  README_Openbabel.txt  README_cmake  datToCSV.py
src/brush/: .cproject  CMakeLists.txt  Doxyfile  Makefile  brush.vcproj  newbrushMakefile
src/brush/include/: brush_doxygen.h  brush_params.h  doxygen.h  moonmd_interface.h  pred_corr_solver.h  reactor1d.h  reset_chemistry.h  settings_io.h  simulator.h
src/brush/source/: moonmd_interface.cpp  pred_corr_solver.cpp  reactor1d.cpp  reset_chemistry.cpp  settings_io.cpp  simulator.cpp
src/camflow/: .project  CMakeLists.txt  Doxyfile  Makefile  newcamflowMakefile
src/camflow/include/: array.h  batch.h  cam_admin.h  cam_boundary.h  cam_configuration.h  cam_control.h  cam_converter.h  cam_error.h  cam_geometry.h  cam_lewis.h  cam_math.h  cam_models.h  cam_params.h  cam_plug.h  cam_premix.h  cam_profile.h  cam_radiation.h  cam_read.h  cam_reporter.h  cam_residual.h  cam_sdr.h  cam_setup.h  cam_soot.h  cvode_wrapper.h  dae_solver.h  flamelet.h  giant_wrapper.h  ida_wrapper.h  interface.h  kinsol_wrapper.h  limex_wrapper.h  radau_wrapper.h  soot_flamelet.h  stagflow.h  unsteadyflamelet.h
src/camflow/source/: batch.cpp  cam_admin.cpp  cam_boundary.cpp  cam_conc.cpp  cam_configuration.cpp  cam_control.cpp  cam_conveter.cpp  cam_geometry.cpp  cam_lewis.cpp  cam_math.cpp  cam_models.cpp  cam_premix.cpp  cam_profile.cpp  cam_radiation.cpp  cam_read.cpp  cam_reporter.cpp  cam_residual.cpp  cam_sdr.cpp  cam_setup.cpp  cam_soot.cpp  cam_soot_old.cpp  cvode_wrapper.cpp  flamelet.cpp  ida_wrapper.cpp  interface.cpp  radau_wrapper.cpp  stagflow.cpp  unsteadyflamelet.cpp
src/geometry/: CMakeLists.txt  Doxyfile  Makefile  newgeometryMakefile
src/geometry/include/: geometry1d.h  local_geometry1d.h  types.h
src/geometry/source/: geometry1d.cpp  local_geometry1d.cpp
src/io/camxml/: .cproject  CMakeLists.txt  Doxyfile  Makefile  camxml.sln  camxml.vcproj  newcamxmlMakefile
src/io/chemkinReader/: CMakeLists.txt  Makefile
src/io/comostrings/: CMakeLists.txt  Makefile  comostrings_test.vcproj  newcomostringsMakefile
src/mopsc/: .cproject  .project  CMakeLists.txt  Doxyfile  Makefile  mops.sln  mopslib.vcproj  newmopscMakefile
src/mopsc/include/: cvodes_utils.h  doxygen.h  loi_reduction.h  mops.h  mops_flow_stream.h  mops_flux_postprocessor.h  mops_gpc_sensitivity.h  mops_mechanism.h  mops_mixture.h  mops_network_simulator.h  mops_ode_solver.h  mops_params.h  mops_particle_solver.h  mops_predcor_solver.h  mops_psr.h  mops_reactor.h  mops_reactor_network.h  mops_reactor_type.h  mops_rhs_func.h  mops_settings_io.h  mops_simplesplit_solver.h  mops_simulator.h  mops_solver.h  mops_solver_factory.h  mops_src_terms.h  mops_strang_solver.h  mops_timeinterval.h  swp_flamesolver.h
src/mopsc/source/: cvodes_utils.cpp  loi_reduction.cpp  mops.cpp  mops_flow_stream.cpp  mops_flux_postprocessor.cpp  mops_gpc_sensitivity.cpp  mops_mechanism.cpp  mops_mixture.cpp  mops_network_simulator.cpp  mops_ode_solver.cpp  mops_particle_solver.cpp  mops_predcor_solver.cpp  mops_psr.cpp  mops_reactor.cpp  mops_reactor_network.cpp  mops_rhs_func.cpp  mops_settings_io.cpp  mops_simplesplit_solver.cpp  mops_simulator.cpp  mops_solver.cpp  mops_solver_factory.cpp  mops_src_terms.cpp  mops_strang_solver.cpp  mops_timeinterval.cpp  swp_flamesolver.cpp
src/odesolvers/cvode/: CMakeLists.txt  Makefile  cvode.vcproj  newcvodeMakefile
src/odesolvers/cvodes/: CMakeLists.txt  Makefile  cvodes.sln  cvodes.vcproj  newcvodesMakefile
src/odesolvers/radau/: CMakeLists.txt  Makefile  newradauMakefile  radau.vcproj
src/sprogc/: .cproject  CMakeLists.txt  Doxyfile  Makefile  newsprogcMakefile  sprogc.vcproj
src/sprogc/include/: gpc.h  gpc_collision_int.h  gpc_delta_stoich.h  gpc_delta_stoich_inl.h  gpc_el_comp.h  gpc_element.h  gpc_element_inl.h  gpc_element_lib.cpp  gpc_fall_off_reaction.h  gpc_gasphase.h  gpc_idealgas.h  gpc_mech.h  gpc_mech_io.h  gpc_mixture.h  gpc_mixture_factory.h  gpc_params.h  gpc_phase.h  gpc_phase_inl.h  gpc_rate_params.h  gpc_reaction.h  gpc_reaction_inl.h  gpc_reaction_set.h  gpc_species.h  gpc_species_comp.h  gpc_species_inl.h  gpc_sri_reaction.h  gpc_stoich.h  gpc_string.h  gpc_thermo.h  gpc_thermo_params.h  gpc_transport_factory.h  gpc_troe_reaction.h  gpc_unit_systems.h  sprog.h
src/sprogc/source/: gpc_collision_int.cpp  gpc_delta_stoich.cpp  gpc_el_comp.cpp  gpc_element.cpp  gpc_gasphase.cpp  gpc_idealgas.cpp  gpc_mech.cpp  gpc_mech_io.cpp  gpc_mixture.cpp  gpc_mixture_factory.cpp  gpc_phase.cpp  gpc_reaction.cpp  gpc_reaction_set.cpp  gpc_species.cpp  gpc_species_comp.cpp  gpc_sri_reaction.cpp  gpc_stoich.cpp  gpc_string.cpp  gpc_thermo.cpp  gpc_third_body_reaction.cpp  gpc_transport_factory.cpp  gpc_troe_reaction.cpp  sprogc_test_main.cpp
src/sweepc/: CMakeLists.txt  Doxyfile  Makefile  newsweepcMakefile  sweeplib.vcproj
src/sweepc/include/: doxygen.h  mt19937.h  sweep.h  swp_PAH.h  swp_PAH_cache.h  swp_PAH_primary.h  swp_PAH_stats.h  swp_abf_model.h  swp_actsites_model.h  swp_actsites_reaction.h  swp_addcoag.h  swp_aggmodel_cache.h  swp_aggmodel_type.h  swp_bintree_primary.h  swp_bintree_serializer.h  swp_bintree_silica_primary.h  swp_bintree_stats.h  swp_birth_process.h  swp_cell.h  swp_coag_weight_rules.h  swp_coagulation.h  swp_component.h  swp_component_inl.h  swp_condensation.h  swp_constant_inception.h  swp_constcoag.h  swp_coords.h  swp_death_process.h  swp_diffusion_process.h  swp_dimer_inception.h  swp_ensemble.h  swp_ensemble_inl.h  swp_ensemble_stats.h  swp_environment_interface.h  swp_erosionfrag.h  swp_fixed_mixture.h  swp_frag_weight_rules.h  swp_fragmentation.h  swp_gas_profile.h  swp_hybrid_constcoag.h  (+78 more)
src/sweepc/source/: mt19937.cpp  swp_PAH.cpp  swp_PAH_cache.cpp  swp_PAH_primary.cpp  swp_PAH_stats.cpp  swp_abf_model.cpp  swp_actsites_reaction.cpp  swp_addcoag.cpp  swp_bintree_primary.cpp  swp_bintree_silica_primary.cpp  (+81 more)
(+1312 files in other folders)
